--- a/src/index.css
+++ b/src/index.css
@@ -34,6 +34,14 @@ h1 {
   font-size: 3.2em;
   line-height: 1.1;
 }
+h2 {
+  font-size: 2.6em;
+  line-height: 0.9;
+}
+h2 {
+  font-size: 2em;
+  line-height: 0.7;
+}
 
 button {
   border-radius: 8px;
