FEAT: Agrega log de transformacion de Headers en consola

--- a/src/index.css
+++ b/src/index.css
@@ -44,6 +44,7 @@ h2 {
 }
 
 button {
+  color: #000000 !important; /* Fuerza el color a negro */
   border-radius: 8px;
   border: 1px solid transparent;
   padding: 0.6em 1.2em;
